# Socket-Sever-CPP

./: README.md
client/: CMakeCache.txt  CMakeLists.txt  Makefile  SocketClient  client  client.cpp  client.h  cmake_install.cmake  main.cpp
server/: CMakeCache.txt  CMakeLists.txt  Makefile  SocketServer  cmake_install.cmake  main.cpp  server.cpp  server.h
